--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development webpack --watch",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "server": "node ./server.js",
+    "dev": "run-p server start"
   },
   "dependencies": {
     "@css-blocks/jsx": "^0.19.0",
@@ -15,16 +17,28 @@
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "css-loader": "0.28.7",
-    "express":"^4.16.3",
+    "express": "^4.16.3",
     "html-webpack-plugin": "2.29.0",
     "obj-str": "^1.0.0",
     "object-assign": "4.1.1",
-    "react-dom": "^16.1.1",
     "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-social-sharing": "^1.3.2",
     "style-loader": "0.19.0",
-    "webpack": "3.8.1"
+    "webpack": "3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "npm-run-all": "^4.1.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-serve": "^2.0.2"
   }
 }
